add workflow diagram to documentation

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Project
 resources/plenarprotokolle/group_1/*
+resources/plenarprotokolle/all/
 !resources/plenarprotokolle/group_1/19_181_187.json
 resources/plenarprotokolle/open_data/*
 !resources/plenarprotokolle/open_data/19180-data.xml
