--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-beautifulsoup4
+beautifulsoup4==4.9.3
 lxml
 fastapi==0.61.1
 uvicorn==0.12.2
@@ -6,3 +6,4 @@ gunicorn==20.0.04
 motor==2.3.0
 jwcrypto==0.8
 ujson==4.0.1
+requests
