--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -7,8 +7,13 @@ services:
     networks:
       - internal
     container_name: "cme_api"
+    environment:
+      - "DB_MONGO_STD_PASSWORD=${DB_MONGO_STD_PASSWORD}"
+      - "DB_MONGO_STD_USERNAME=${DB_MONGO_STD_USERNAME}"
+    volumes:
+      - ./resources/plenarprotokolle/open_data:/plenarprotokolle/
     ports:
-      - "9001:9001"
+      - "127.0.0.1:9002:9001"
   mongodb:
     image: mongo:latest
     networks:
@@ -19,12 +24,15 @@ services:
     volumes:
       - db-volume:/data/db
       - configdb-volume:/data/configdb
+      - ./mongo-init.sh:/docker-entrypoint-initdb.d/mongo-init.sh:ro
     environment:
       - "MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME}"
       - "MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD}"
+      - "DB_MONGO_STD_PASSWORD=${DB_MONGO_STD_PASSWORD}"
+      - "DB_MONGO_STD_USERNAME=${DB_MONGO_STD_USERNAME}"
+      - "MONGO_INITDB_DATABASE=admin"
 volumes:
   db-volume: { }
   configdb-volume: { }
 networks:
   internal: { }
-#    internal: true
