add basic auth for API, refactor

--- a/.env.dev
+++ b/.env.dev
@@ -1,3 +1,4 @@
+LANDSCAPE=dev
 COMPOSE_PROJECT_NAME=cme
 MONGO_INITDB_ROOT_USERNAME=cme
 MONGO_INITDB_ROOT_PASSWORD=highlySecureDevServerPassword!61239$
