improved name extraction (all files result now in around 805 mdbs)

--- a/.env.dev
+++ b/.env.dev
@@ -1,4 +1,6 @@
 LANDSCAPE=dev
 COMPOSE_PROJECT_NAME=cme
-MONGO_INITDB_ROOT_USERNAME=cme
+MONGO_INITDB_ROOT_USERNAME=cme_root
 MONGO_INITDB_ROOT_PASSWORD=highlySecureDevServerPassword!61239$
+DB_MONGO_STD_USERNAME=cme_api
+DB_MONGO_STD_PASSWORD=highlySecureDevServerPassword!61239$
