--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -7,14 +7,13 @@ services:
     volumes:
       - db-volume:/data/db
       - configdb-volume:/data/configdb
-    networks:
-      - internal
+      - ./mongo-init.sh:/docker-entrypoint-initdb.d/mongo-init.sh:ro
     environment:
       - "MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME}"
       - "MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD}"
+      - "DB_MONGO_STD_PASSWORD=${DB_MONGO_STD_PASSWORD}"
+      - "DB_MONGO_STD_USERNAME=${DB_MONGO_STD_USERNAME}"
+      - "MONGO_INITDB_DATABASE=admin"
 volumes:
   db-volume: {}
   configdb-volume: {}
-networks:
-  internal:
-    internal: true
