--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -9,11 +9,12 @@ services:
       - configdb-volume:/data/configdb
       - ./mongo-init.sh:/docker-entrypoint-initdb.d/mongo-init.sh:ro
     environment:
-      - "MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME}"
-      - "MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD}"
-      - "DB_MONGO_STD_PASSWORD=${DB_MONGO_STD_PASSWORD}"
-      - "DB_MONGO_STD_USERNAME=${DB_MONGO_STD_USERNAME}"
+      - "MONGO_INITDB_ROOT_USERNAME"
+      - "MONGO_INITDB_ROOT_PASSWORD"
       - "MONGO_INITDB_DATABASE=admin"
+      - "CME_DB_USERNAME"
+      - "CME_DB_PASSWORD"
+      - "CME_DB_NAME"
 volumes:
   db-volume: {}
   configdb-volume: {}
