--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -8,7 +8,7 @@ services:
       - internal
     container_name: "cme_api"
     environment:
-      - "LANDSCAPE=${LANDSCAPE}"
+      - "LANDSCAPE"
       - "CME_DB_USERNAME"
       - "CME_DB_PASSWORD"
       - "CME_DB_NAME"
